<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="button_gamestart">Start Game!</string>
    <string name="button_forward">Forward</string>
    <string name="button_turnLeft">Left</string>
    <string name="button_turnRight">Right</string>
    <string name="button_turnAround">Around</string>
    <string name="button_attack">Attack</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_cancel">X</string>
    <string name="button_confirm">O</string>
    <string name="MoveJack">move</string>
    <string name="title_activity_win_screen">Win Screen</string>
    <string name="button_restart">Restart</string>

</resources>