<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="OnClick"
    android:orientation="vertical"
    tools:context=".MainGame" >
        
	    <com.example.drawing.GameBoard
	        android:id="@+id/the_canvas"
	        android:layout_width="match_parent"
	        android:layout_height="350dp"
	        android:layout_weight="0.18"
	        android:onClick="blank" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal" >
			
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical">
	            
	             <View
		        	android:layout_width="match_parent"
		        	android:layout_height="0dp"
		        	android:layout_weight="2" 
		        	android:onClick="blank"/>
	             
	             <Button
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1"
	                 android:onClick="cancelLastMove"
	                 android:text="@string/button_cancel" />
	             
	             <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"
	                 android:text="0" 
	                 android:textSize="40sp"
	                 android:gravity="center"
	                 android:id="@+id/move0" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
		        android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical">
	        	
	            <View
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"/>
	            
		        <Button
		            android:layout_width="match_parent"
		            android:layout_height="0dp"
		            android:layout_weight="1"
		            android:onClick="turnLeft"
		            android:text="@string/button_turnLeft" />
		        
		        <View
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1"
	                 android:onClick="blank" />
		        
		        <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"
	                 android:text="0" 
	                 android:textSize="40sp"
	                 android:gravity="center"
	                 android:id="@+id/move1" />
	        
	        </LinearLayout>
			
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical">

	            <Button
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1"
	                android:onClick="move"
	                android:text="@string/button_forward" />

	            <Button
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1"
	                android:onClick="attack"
	                android:text="@string/button_attack" />

	            <Button
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1"
	                android:onClick="turnAround"
	                android:text="@string/button_turnAround" />

	            <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"
	                 android:text="0" 
	                 android:textSize="40sp"
	                 android:gravity="center"
	                 android:id="@+id/move2" />
	            
	            
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            
	            <View
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1"
	                 android:onClick="blank" />

	            <Button
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1"
	                android:onClick="turnRight"
	                android:text="@string/button_turnRight" />
	            
	            <View
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1"
	                 android:onClick="blank" />
		        
		        <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"
	                 android:text="0" 
	                 android:textSize="40sp"
	                 android:gravity="center"
	                 android:id="@+id/move3" />

	        </LinearLayout>
			
	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical">
		        
	            <TextView
	                android:id="@+id/player_turn"
	                android:layout_width="match_parent"
	                android:layout_height="0dp"
	                android:layout_weight="1"
	                android:text="1" 
	                android:textSize="40sp"
	                android:clickable="false"
         			android:linksClickable="false"
         			android:focusable="false"
         			android:focusableInTouchMode="false"
         			android:longClickable="false" />
         				            
	             <View
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"/>
	             
	             <Button
	                 android:id="@+id/movingtestright1"
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1"
	                 android:onClick="confirm"
	                 android:text="@string/button_confirm" />
	             
	             <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="0dp"
	                 android:layout_weight="1" 
	                 android:onClick="blank"
	                 android:text="0" 
	                 android:textSize="40sp"
	                 android:gravity="center"
	                 android:id="@+id/move4" />
	                    
	        </LinearLayout>
	        

	        
	    </LinearLayout>

</LinearLayout>